[package]
name = "async-brotli-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-compression = { version = "0.4.36", features = ["brotli", "futures-io"] }
futures = { version = "0.3.31", default-features = false, features = ["std", "async-await"] }
js-sys = "0.3.83"
wasm-bindgen = "0.2.106"
wasm-streams = "0.4.2"
web-sys = { version = "0.3.83", features = ["ReadableStream"] }
